syntax = "proto3";
option go_package = "github.com/hugoatease/pitcher/protobuf";

service Pitcher {
  rpc MatchTrack(MatchingRequest) returns (MatchingResponse) {}
  rpc GetTrack(TrackRequest) returns (TrackResponse) {}
  rpc GetTracks(TracksRequest) returns (TracksResponse) {}
  rpc GetCoverArt(CoverArtRequest) returns (CoverArtResponse) {}
  rpc GetArtist(ArtistRequest) returns (ArtistResponse) {}
  rpc GetArtists(ArtistsRequest) returns (ArtistsResponse) {}
}

message MatchingRequest {
  string artist_name = 1;
  string track_name = 2;
  string release_name = 3;
}

message MatchingResponse {
  Track track = 1;
}

message TrackRequest {
  string gid = 1;
}

message TrackResponse {
  Track track = 1;
}

message TracksRequest {
  repeated string gids = 1;
}

message TracksResponse {
  map<string, Track> tracks = 1;
}

message CoverArtRequest {
  string album_gid = 1;
}

message CoverArtResponse {
  string url = 1;
  string small_url = 2;
  string medium_url = 3;
  string large_url = 4;
}

message ArtistRequest {
  string gid = 1;
}

message ArtistResponse {
  Artist artist = 1;
}

message ArtistsRequest {
  repeated string gids = 1;
}

message ArtistsResponse {
  map<string, Artist> artists = 1;
}

message Artist {
  int64 id = 1;
  string gid = 2;
  string name = 3;
}

message ReleaseDate {
  int64 year = 1;
  int64 month = 2;
  int64 day = 3;
}

message Album {
  int64 id = 1;
  string gid = 2;
  string name = 3;
  ReleaseDate release_date = 4;
}

message Track {
  int64 id = 1;
  string gid = 2;
  string recording_id = 3;
  string name = 4;
  uint32 length = 5;
  Artist artist = 6;
  Album album = 7;
  int32 position = 8;
  int32 medium_position = 9;
}